# Pong

./: .gitignore  CMakeLists.txt  README.md
game/res/: configuration.json
lib/: json.h
lib/SDL2-2.24.1/cmake/: sdl2-config.cmake
src/: Ball.cpp  Ball.h  Bot.cpp  Bot.h  ConfigurationHelper.cpp  ConfigurationHelper.h  Control.cpp  Control.h  Direction.cpp  Direction.h  Event.h  EventSDLAdapter.cpp  EventSDLAdapter.h  Game.cpp  Game.h  Player.cpp  Player.h  RenderSystem.h  RenderSystemSDL.cpp  RenderSystemSDL.h  User.cpp  User.h  Window.cpp  Window.h  main.cpp
